working inpainting png, jpg images, added deleting all photos, deleting account, repaired dark mode, removed rotating pic, adjusting contrast/brightness

--- a/src/static/style_profile.css
+++ b/src/static/style_profile.css
@@ -67,6 +67,7 @@ button {
     font-size: 18px;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.2s ease;
+    margin-bottom: 15px;
 }
 
 button:hover {
